# transsion-ota-prober

./: .gitignore  .gitmodules  AGENTS.md  README.md  checkota.py  pyproject.toml
apps/checkota/: checkota.py  pyproject.toml
apps/checkota/configs/: config-A671LC.yml  config-AE10.yml  config-CL7.yml  config-CM8.yml  config-CN5.yml  config-KL5.yml  config-KL6.yml  config-KL7.yml  config-KL8.yml  config-KL8H.yml  config-KM5.yml  config-KM6.yml  config-KM7.yml  config-KM7k.yml  config-KM8n.yml  config-KM9.yml  config-KN3.yml  config-LI7.yml  config-LJ6.yml  config-LJ7.yml  config-LJ8.yml  config-LJ8k.yml  config-LJ9.yml  config-LK7.yml  config-LK7k.yml  config-S686LN.yml  config-T1103.yml  config-X1103.yml  config-X1201.yml  config-X6528.yml  config-X6531.yml  config-X6731B.yml  config-X6838.yml  config-X6855.yml  config-X6857.yml  config-X6858.yml  config-X6860.yml  config-X6882.yml  config-X6886.yml  config-X6887.yml  (+3 more)
apps/checkota/modules/: __init__.py  cli.py  constants.py  description.py  fingerprints.py  manager.py  metadata.py  models.py  notifier.py  paths.py  processor.py  runtime.py  telegram.py  update_checker.py  zip_metadata.py
apps/checkota/tests/: test_bootstrap.py  test_cli_main_drain.py  test_description_terminal_wrap.py  test_drain_after_interrupt.py  test_manager_idempotence.py  test_metadata_cache_dedup.py  test_metadata_post_timestamp.py  test_pr4_concurrency.py  test_telegram_escape.py  test_telegram_payload_sanitize.py  test_zip_metadata_transient_retry.py
checkota/: __init__.py  __main__.py  cli.py  constants.py  description.py  fingerprints.py  (+10 more)
(+140 files in other folders)
