[project]
name = "checkota"
version = "0.1.0"
description = "OTA firmware update checker for Transsion Holdings devices (TECNO, Infinix, itel)"
requires-python = ">=3.9"
dependencies = ["requests>=2.31", "PyYAML>=6.0", "protobuf>=4.0"]

[project.scripts]
checkota = "checkota:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["checkota"]
packages = ["modules"]
